<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/album_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_sfondo_home"
    android:orientation="vertical"
    tools:context="it.flaviodepedis.mymusicapp.AlbumActivity">

    <TextView
        android:id="@+id/album_desc"
        style="@style/DescActivityStyle"
        android:text="@string/album_desc" />

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bar"
        android:layout_below="@id/album_desc">

        <LinearLayout
            android:id="@+id/album_h_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/album_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="15dp"
                android:orientation="vertical"
                android:background="@color/primary_light">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:src="@drawable/ic_justin"
                    android:scaleType="centerCrop"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/search_artist_2"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/primary_text" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/number_song_1"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/secondary_text" />

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:id="@+id/album_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="15dp"
                android:orientation="vertical"
                android:background="@color/primary_light">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:src="@drawable/ic_top_hits_italy"
                    android:scaleType="centerCrop"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/search_artist_6"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/primary_text" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/number_song_1"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/secondary_text" />

            </LinearLayout>
        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/bar"
        style="@style/MenuBarStyle"
        android:orientation="horizontal">

        <include
            android:id="@+id/menu_bar_2"
            layout="@layout/menu_bar_2" />

    </LinearLayout>

</RelativeLayout>